==> sunk1984/5804/Common/PowerPac/TCPIP/Core/mcu/IP_NI_STM32F207.c <==
#include  <stdio.h>      // For printf (when debugging, optional)
#include  "IP_Int.h"
#include  "BSP.h"        // Board specifics
#include  "IP_NI_STM32F207.h"
#define NUM_RX_BUFFERS     (3)
#define NUM_TX_BUFFERS     (1)
#define BUFFER_SIZE        (1536)
#define USE_HW_CHECKSUM_TX (1) // Enable Tx checksum computation of the MAC and disable the checksum computation of the stack..
#define RCC_BASE_ADDR             ((unsigned int)(0x40023800))
#define RCC_AHB1RSTR              (*(volatile unsigned int*)(RCC_BASE_ADDR + 0x10))
#define RCC_AHB1ENR               (*(volatile unsigned int*)(RCC_BASE_ADDR + 0x30))
#define ETHERNET_BASE_ADDR         (0x40028000)
#define ETH_MACCR                  (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +   0x0))  // MAC configuration register (ETH_MACCR)
#define ETH_MACFFR                 (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +   0x4))  // MAC frame filter register (ETH_MACFFR)
#define ETH_MACHTHR                (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +   0x8))  // MAC hash table high register (ETH_MACHTHR)
#define ETH_MACHTLR                (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +   0xC))  // MAC hash table low register (ETH_MACHTLR)
#define ETH_MACMIIAR               (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +  0x10))  // MAC MII address register (ETH_MACMIIAR)
#define ETH_MACMIIDR               (*(volatile unsigned int*)(ETHERNET_BASE_ADDR +  0x14))  // MAC MII data register (ETH_MACMIIDR)

static void _PHY_WriteReg(IP_PHY_CONTEXT* pContext, unsigned RegIndex, unsigned v) {
  unsigned Addr;
  unsigned Val;

  Addr = pContext->Addr;
  Val    = ETH_MACMIIAR;
  if ((Val & ETH_MACMII_BUSY_MASK) == 0) {  // Check if busy
    ETH_MACMIIDR = (v & 0xFFFF);
    Val = (Addr     << 11  // [15:11] PA: PHY Address
        |  RegIndex <<  6  //  [10:6] MR: MII Register
        |  0        <<  5  //     [5] Reserved
        |  0        <<  2  //   [4:2] CR: Clock Range, valid values are: 000  60-100 MHz HCLK/42; 001  100-120 MHz   HCLK/62; 010 20-35 MHz HCLK/16; 011  35-60 MHz HCLK/26; 100, 101, 110, 111   Reserved
        |  1        <<  1  //     [1] MW: MII Write. When set, this bit tells the PHY that this will be a Write operation using the MII Data register. If this bit is not set, this will be a Read operation, placing the data in the MII Data register.
        |  1        <<  0  //     [0] MW: MII Busy
          );
    ETH_MACMIIAR = Val;
  }
  //
  // Wait for commmand to finish
  //
  while (ETH_MACMIIAR & ETH_MACMII_BUSY_MASK);
}

static unsigned _PHY_ReadReg(IP_PHY_CONTEXT* pContext, unsigned RegIndex) {
  unsigned v;
  unsigned Addr;

  Addr = pContext->Addr;
  v    = ETH_MACMIIAR;
  if ((v & ETH_MACMII_BUSY_MASK) == 0) {  // Check if busy
    v = (Addr     << 11  // [15:11] PA: PHY Address
      |  RegIndex <<  6  //  [10:6] MR: MII Register
      |  0        <<  5  //     [5] Reserved
      |  0        <<  2  //   [4:2] CR: Clock Range, valid values are: 000  60-100 MHz HCLK/42; 001  100-120 MHz   HCLK/62; 010 20-35 MHz HCLK/16; 011  35-60 MHz HCLK/26; 100, 101, 110, 111   Reserved
      |  0        <<  1  //     [1] MW: MII Write. When set, this bit tells the PHY that this will be a Write operation using the MII Data register. If this bit is not set, this will be a Read operation, placing the data in the MII Data register.
      |  1        <<  0  //     [0] MW: MII Busy
        );
    ETH_MACMIIAR = v;
  }
  //
  // Wait for commmand to finish
  //
  while (ETH_MACMIIAR & ETH_MACMII_BUSY_MASK);
  //
  // Read and return data
  //
  v = (ETH_MACMIIDR & 0xFFFF);
  return v;
}

static int _SetFilter(IP_NI_CMD_SET_FILTER_DATA * pFilter) {
  const U8 * pAddrData;

  //
  // The first DA byte that is received on the MII interface corresponds to the LS Byte
  // (bits [7:0]) of the MAC address low register. For example, if 0x1122 3344 5566
  // is received (0x11 is the first byte) on the MII as the destination address, then the MAC
  // address 0 register [47:0] is compared with 0x6655 4433 2211.
  //
  pAddrData   = *(&pFilter->pHWAddr);
  ETH_MACA0LR = IP_LoadU32LE(pAddrData);      // lower (first) 32 bits
  ETH_MACA0HR = IP_LoadU16LE(pAddrData + 4);  // upper (last)  16 bits
  return 0;     // O.K.
}

static void _AllocBufferDescs(void) {
  BUFFER_DESC  *pBufferDesc;
  U8 * pMem;

  //
  // Alloc memory for buffer descriptors and buffers
  //
  pMem = (U8*)IP_Alloc((_NumRxBuffers * (sizeof(BUFFER_DESC) + 1536)) + (NUM_TX_BUFFERS * sizeof(BUFFER_DESC)) + 8);   // Alloc nRxBufferDesc * (32 bytes buffer desc + 1536 buffer) + Tx buffer descriptors + space for aligment
  pMem = (U8*)_Align(pMem, 8);
  pBufferDesc = (BUFFER_DESC*) pMem;
  _pTxBufDesc  = pBufferDesc;
  _paRxBufDesc = pBufferDesc + NUM_TX_BUFFERS;
}

static void _InitBufferDescs(void) {
  _InitTxBufferDescs();
  _InitRxBufferDescs();
}

static void  _SendPacket(void) {
  void   * pPacket;
  unsigned NumBytes;
  U32 v;

  NumBytes = IP_GetNextOutPacketFast(&pPacket);
  if (NumBytes == 0) {
    _TxIsBusy = 0;
    return;
  }
  IP_LOG((IP_MTYPE_DRIVER, "DRIVER: Sending packet: %d bytes", NumBytes));
  INC(_DriverStats.TxSendCnt);
  _pTxBufDesc->BufDesc1  = ((NumBytes) & 0xFFF);
  _pTxBufDesc->BufDesc2  = ((U32)pPacket);
  _pTxBufDesc->BufDesc0 |= (1UL << 31);    // Set OWN bit
  //
  // Check if transmit buffer unavailable status bit is set and clear it if necessary
  //
  v = ETH_DMASR;
  if (v & (1 << 2)) {
    ETH_DMASR = (1 << 2);  // Clear transmit buffer unavailable status bit
  }
  ETH_DMATPDR = 0;         // When these bits are written with any value, the DMA reads the current descriptor pointed to by the ETH_DMACHRDR register.
}

static void _ISR_Handler(void) {
  U32 v;

  v = ETH_DMASR;
  ETH_DMASR = v;       // Clear DMA interrupt status register
  //
  // Process normal interrupts
  //
  if (v & EMAC_DMA_ISR_NIS_MASK) {
    //
    // Rx interrupt
    //
    if (v & EMAC_DMA_ISR_RS_MASK) {
      INC(_DriverStats.RxIntCnt);
      IP_OnRx();
    }
    //
    // Tx interrupt
    //
    if (v & EMAC_DMA_ISR_TS_MASK) {
      if (_TxIsBusy) {
        INC(_DriverStats.TxIntCnt);
        IP_RemoveOutPacket();
        _SendPacket();
      } else {
        IP_WARN((IP_MTYPE_DRIVER, "DRIVER: Tx complete interrupt, but no packet sent."));
      }
    }
    if (v & EMAC_DMA_ISR_TBUS_MASK) {
      if (_TxIsBusy) {
        INC(_DriverStats.TxIntCnt);
        ETH_DMATPDR = 0;
      }
    }
  }
  //
  // Check process Rx error interrupts
  //
  if (v & EMAC_DMA_ISR_AIS_MASK) {
    INC(_DriverStats.RxErrCnt);
    if (v & (EMAC_DMA_ISR_FBES_MASK | EMAC_DMA_ISR_RBUS_MASK | EMAC_DMA_ISR_ROS_MASK)) {
      IP_WARN_INTERNAL((IP_MTYPE_DRIVER, "DRIVER: No Rx DMA buffers available"));
      _ResetRxError();
      ETH_DMATPDR = 0;
    }
  }
}

static  int  _Init(unsigned Unit) {
  _PHY_Context.pAccess = &_PHY_pAccess;        // PHY read/write functions are static in this module
  _PHY_Context.Addr    = IP_PHY_ADDR_ANY;      // Activate automatic scan for external PHY

  BSP_ETH_Init(Unit);                          // Configure the pins and interface type (MII or RMII)
  //
  // Enable EMAC clocks
  //
  RCC_AHB1ENR  |= (0
                | (1 << 28)  // ETHMACTPEN: Ethernet PTP clock enable
                | (1 << 27)  // ETHMACRXEN: Ethernet MAC reception clock enable
                | (1 << 26)  // ETHMACTXEN: Ethernet MAC transmission clock enable
                | (1 << 25)  // ETHMACEN: Ethernet MAC clock enable
                  );
  //
  // Reset the ETH controller
  //
  RCC_AHB1RSTR |= (1uL << 25);
  RCC_AHB1RSTR &= ~(1uL << 25);
  //
  // Init PIO, PHY and update link state
  //
  _PHY_pDriver->pfInit(&_PHY_Context);                                // Configure the PHY
  _UpdateLinkState();
  //
  // Creates descriptor lists and provide the DMA with the start address of each list.
  //
  _AllocBufferDescs();
  _InitBufferDescs();
  //
  // Set bus access parameters
  //
  ETH_DMABMR = ( 1 << 25 // AAB[25]:     Address-aligned beats
               | 0 << 24 // FPM[24]:     4xPBL mode
               | 1 << 23 // USP[23]:     Use separate PBL
               | 1 << 17 // RDP[22:17]:  Rx DMA PBL
               | 0 << 16 // FB[16]:      Fixed burst
               | 0 << 14 // RTPR[15:14]: Rx Tx priority ratio
               | 1 <<  8 // PBL[13:8]:   Programmable burst length
               | 0 <<  2 // DSL[6:2]:    Descriptor skip length
               | 0 <<  1 // DA[1]:       DMA Arbitration
               | 0 <<  0 // SR[0]:       Software reset
               );
  //
  // Enable DMA interrupts
  //
  ETH_DMAIER = ( 1 << 16 // NISE:  Normal interrupt summary enable
               | 1 << 15 // AISE:  Abnormal interrupt summary enable
               | 0 << 14 // ERIE:  Early receive interrupt enable
               | 1 << 13 // FBEIE: Fatal bus error interrupt enable
               | 0 << 10 // ETIE:  Early transmit interrupt enable
               | 0 <<  9 // RWTIE: receive watchdog timeout interrupt enable
               | 0 <<  8 // RPSIE: Receive process stopped interrupt enable
               | 1 <<  7 // RBUIE: Receive buffer unavailable interrupt enable
               | 1 <<  6 // RIE:   Receive interrupt enable
               | 1 <<  5 // TUIE:  Underflow interrupt enable
               | 1 <<  4 // ROIE:  Overflow interrupt enable
               | 0 <<  3 // TJTIE: Transmit jabber timeout interrupt enable
               | 1 <<  2 // TBUIE: Transmit buffer unavailable interrupt enable
               | 0 <<  1 // TPSIE: Transmit process stopped interrupt enable
               | 1 <<  0 // TIE:   Transmit interrupt enable
               );
  ETH_DMARDLAR = (U32)_paRxBufDesc;
  ETH_DMATDLAR = (U32)_pTxBufDesc;
  //
  //
  //
  ETH_MACFFR = ( 0
               | 0 << 31 // RA:   Receive all
               | 1 << 10 // HPF:  Hash or perfect filter
               | 0 <<  9 // SAF:  Source address filter
               | 0 <<  8 // SAIF: Source address inverse filtering
               | 0 <<  6 // PCF:  Pass control frames, 00 or 01: MAC prevents all control frames from reaching the application, 10: MAC forwards all control frames to application even if they fail the address filter, 11: MAC forwards control frames that pass the address filter.
               | 0 <<  5 // BFD:  Broadcast frames disable
               | 0 <<  4 // PAM:  Pass all multicast
               | 0 <<  3 // DAIF: Destination address inverse filtering
               | 0 <<  2 // HM:   Hash multicast
               | 0 <<  1 // HU:   Hash unicast
               | 0 <<  0 // PM:   Promiscuous mode
               );
  ETH_DMAOMR = ( 0
               | 0 << 26 // DTCEFD:     Dropping of TCP/IP checksum error frames disable
               | 0 << 25 // RSF:        Receive store and forward
               | 0 << 24 // DFRF:       Disable flushing of received frames
#if USE_HW_CHECKSUM_TX
               | 1 << 21 // TSF:        Transmit store and forward
#else
               | 0 << 20 // TSF:        Transmit store and forward
#endif
               | 0 << 20 // FTF:        Flush transmit FIFO
               | 0 << 14 // TTC[16:14]: Transmit threshold control
               | 0 << 13 // ST:         Start/stop transmission
               | 0 <<  7 // FEF:        Forward error frames
               | 0 <<  6 // FUGF:       Forward undersized good frames
               | 0 <<  3 // RTC[4:3]:   Receive threshold control
               | 0 <<  2 // OSF:        Operate on second frame
               | 0 <<  1 // SR:         Start/stop receive
               );
  BSP_ETH_InstallISR(_ISR_Handler);
  ETH_MACCR  = ( 0
               | 0 << 21  // WD:         Watchdog disable
               | 0 << 20  // JD:         Jabber disable
               | 0 << 17  // IFG[19:17]: Interframe gap
               | 0 << 16  // CSD:        Carrier sense disable
               | 1 << 14  // FES:        Fast Ethernet speed
               | 0 << 13  // ROD:        Receive own disable
               | 0 << 12  // LM:         Loopback mode
               | 1 << 11  // DM:         Duplex mode
               | 1 << 10  // IPCO:       IPv4 checksum offload
               | 0 <<  9  // RD:         Retry disable
               | 0 <<  7  // APCS:       Automatic pad/CRC stripping
               | 0 <<  5  // BL[6:5]:    Back-off limit
               | 0 <<  4  // DC:         Deferral check
               | 1 <<  3  // TE:         Transmitter enable
               | 1 <<  2  // RE:         Receiver enable
               );
  ETH_DMAOMR |= ( 0
                | 1 << 13 // ST: Start/stop transmission
                );
  ETH_DMAOMR |= ( 0
                | 1 <<  1 // SR: Start/stop receive
                );
  _IsInited = 1;
  return 0;
}

static int _GetPacketSize(unsigned Unit) {
  U32 Stat;
  BUFFER_DESC * pBufferDesc;
  int i;
  int NumBuffers;
  int PacketSize;

  (void)Unit;
  i = _iNextRx;
  NumBuffers = 1;
  do {
    if (i >= _NumRxBuffers) {
      i -= _NumRxBuffers;
    }
    pBufferDesc = _paRxBufDesc + i;
    Stat = pBufferDesc->BufDesc0;

    if ((Stat & EMAC_RXBUF_DMA_OWNED_MASK) == 1) {
      return 0;        //  This happens all the time since the stack polls until we are out of packets
    }
    if (Stat & EMAC_RXBUF_EOF_MASK) {
      // FoundPacket
      PacketSize  = ((Stat & 0x3FFF0000) >> 16); // Packet size are bit [29:16] of Status.
      PacketSize -= 4;                           // Substract 4 bytes to remove the CRC of the Ethernet frame.
      return PacketSize;
    }
    i++;
  } while (++NumBuffers < _NumRxBuffers);
  return 0;
}

static int _ReadPacket(unsigned Unit, U8 *pDest, unsigned NumBytes) {
  U8     *pSrc;
  U32 Addr;
  int NumBuffers;

  (void)Unit;
  NumBuffers = 1;
  if (pDest) {
    Addr = (_paRxBufDesc + _iNextRx)->BufDesc2;
    pSrc = (U8*) Addr;
    IP_MEMCPY(pDest, pSrc, NumBytes);
    INC(_DriverStats.RxCnt);
  }
  if (pDest) {
    IP_LOG((IP_MTYPE_DRIVER, "Packet: %d Bytes --- Read", NumBytes));
  } else {
    IP_LOG((IP_MTYPE_DRIVER, "Packet: %d Bytes --- Discarded", NumBytes));
  }
  _FreeRxBuffers(NumBuffers);
  return 0;
}

static int _Control(unsigned Unit, int Cmd, void * p) {
  (void)Unit;
  if (Cmd == IP_NI_CMD_SET_FILTER) {
    return _SetFilter((IP_NI_CMD_SET_FILTER_DATA*)p);
  } else if (Cmd == IP_NI_CMD_SET_BPRESSURE) {
    return -1;
  } else if (Cmd == IP_NI_CMD_CLR_BPRESSURE) {
    return -1;
  } else if (Cmd == IP_NI_CMD_SET_PHY_ADDR) {
    _PHY_Context.Addr = (U8)(int)p;
    return 0;
  } else if (Cmd == IP_NI_CMD_SET_PHY_MODE) {
    _PHY_Context.UseRMII = (U8)(int)p;
    return 0;
  } else if (Cmd == IP_NI_CMD_GET_CAPS) {
    int v;
    v = 0
#if USE_HW_CHECKSUM_TX
     | IP_NI_CAPS_WRITE_IP_CHKSUM     // Driver capable of inserting the IP-checksum into an outgoing packet?
     | IP_NI_CAPS_WRITE_UDP_CHKSUM    // Driver capable of inserting the UDP-checksum into an outgoing packet?
     | IP_NI_CAPS_WRITE_TCP_CHKSUM    // Driver capable of inserting the TCP-checksum into an outgoing packet?
     | IP_NI_CAPS_WRITE_ICMP_CHKSUM   // Driver capable of inserting the ICMP-checksum into an outgoing packet?
#endif
     | IP_NI_CAPS_CHECK_IP_CHKSUM     // Driver capable of computing and comparing the IP-checksum of an incoming packet?
     | IP_NI_CAPS_CHECK_UDP_CHKSUM    // Driver capable of computing and comparing the UDP-checksum of an incoming packet?
     | IP_NI_CAPS_CHECK_TCP_CHKSUM    // Driver capable of computing and comparing the TCP-checksum of an incoming packet?
     | IP_NI_CAPS_CHECK_ICMP_CHKSUM   // Driver capable of computing and comparing the ICMP-checksum of an incoming packet?
     ;
    return v;
  }
  else if ( Cmd == IP_NI_CMD_SET_SUPPORTED_DUPLEX_MODES) {
    if (_IsInited) {
      return -1;
    }
    _PHY_Context.SupportedModes = (U16)(int)p;
    return 0;
  }
  return -1;
}
